--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2634,6 +2634,34 @@ html {
   height: auto;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
+.h-28 {
+  height: 7rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
 .max-h-full {
   max-height: 100%;
 }
@@ -2684,6 +2712,22 @@ html {
 
 .w-32 {
   width: 8rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .max-w-md {
@@ -3641,6 +3685,10 @@ html {
     height: 12rem;
   }
 
+  .md\:h-14 {
+    height: 3.5rem;
+  }
+
   .md\:w-\[46\%\] {
     width: 46%;
   }
@@ -3651,6 +3699,10 @@ html {
 
   .md\:w-80 {
     width: 20rem;
+  }
+
+  .md\:w-36 {
+    width: 9rem;
   }
 
   .md\:grid-cols-3 {
